--- a/src/main/resources/assets/gtnhcommunitymod/lang/zh_CN.lang
+++ b/src/main/resources/assets/gtnhcommunitymod/lang/zh_CN.lang
@@ -1560,3 +1560,4 @@ NameMegaStoneBreaker=硅岩制造机
 Tooltip_SpaceScaler_09=2级方块解锁HIP单元限制, 3级解锁稳定黑洞限制.
 GT5U.gui.text.SimpleShutDownReasons.NoEnoughCriticalPhotonInput=没有足够临界光子输入
 Tooltip_EcoSphereSimulator.0.13=二级配方尚未完成
+NameOreDictInputHatch=矿典输入舱
