--- a/src/main/resources/assets/gtnhcommunitymod/lang/en_US.lang
+++ b/src/main/resources/assets/gtnhcommunitymod/lang/en_US.lang
@@ -1560,3 +1560,4 @@ NameMegaStoneBreaker=Silicon Rock Synthesizer
 Tooltip_SpaceScaler_09=T2 block unlock HIP Unit limitation, T3 block unlock Stabilized Black Hole limitation.
 GT5U.gui.text.SimpleShutDownReasons.NoEnoughCriticalPhotonInput=No Enough Critical Photon Input
 Tooltip_EcoSphereSimulator.0.13=Secondary recipes incomplete
+NameOreDictInputHatch=Ore Dict Input Hatch
